@@ -1,3 +1,10 @@
+2001-11-01  Bruno Haible  <haible@clisp.cons.org>
+
+	* javacomp.m4 (gt_JAVACOMP): Test for the existence of gcj, javac,
+	jikes in $PATH. Needed because the call of a program not found in PATH
+	yields return code 1 with SunOS 4 /bin/sh and is thus indistinguishable
+	from a successful call returning 1.
+
 2001-10-30  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext.m4 (AM_GNU_GETTEXT): Make sure "make dist" works even when
